fix(cli): Pass `--enable-native-access=ALL-UNNAMED` to `jvmRun`
This avoids output like

```
WARNING: A restricted method in java.lang.System has been called
WARNING: java.lang.System::load has been called by com.sun.jna.Native...
WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for...
WARNING: Restricted methods will be blocked in a future release unless...
```

Signed-off-by: Sebastian Schuberth <sebastian@doubleopen.io>